--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,6 +1,8 @@
 <div class="imgbgl ">
   <div class="row fh mb">
-    <div class="col s8"></div>
+    <div class="col s8 imag ">
+      <img class="logo" src="../../../assets/images/unefa_logo.png" >
+    </div>
 
   <div class="container valign-wrapper col s4 fh  white" >
       <mat-card class="login-card">
