--- a/src/app/Components/materias/materias.component.html
+++ b/src/app/Components/materias/materias.component.html
@@ -260,7 +260,7 @@
 
 
                 <div *ngIf="!edit">
-                    <button (click)="EditarMateria(materia.codigo_materia)" (click)="edit=true" (click)="horaP=materia.horas_pra" (click)="horaL = materia.horas_lab  " mat-icon-button>
+                    <button (click)="EditarMateria(materia.codigo_materia)" (click)="edit=true" (click)="tomarcodigo = materia.codigo_materia" mat-icon-button>
                <mat-icon>edit</mat-icon>
             </button>
                 </div>
